src/components/Chat/Chat.module.scss
@use "../../assets/styles/mixins" as *;

.chatBtn {
  position: fixed;
  bottom: 0;
  right: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 8px;
  width: 100px;
  height: 50px;
  color: var(--color-primary);
  background-color: var(--color-white);
  font-size: 0.875rem;
  border-radius: 4px 4px 0 0;
  box-shadow: 0 4px 20px 0 rgba(28, 28, 51, 0.16);
  cursor: pointer;
}

.chatDialog {
  position: fixed;
  bottom: 0;
  right: 10px;
  width: 642px;
  height: 582px;
  background-color: #f3f3f3;
  transform-origin: bottom right;
  transition:
    transform 0.25s ease,
    opacity 0.25s ease;
  border: 1px solid #e0e0e0;
  border-radius: 4px 4px 0 0;
  box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.122);
  z-index: 3;
  display: flex;
  flex-direction: column;

  .chatDialogTitle {
    box-sizing: border-box;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 4px 10px;
    border-radius: 4px 4px 0 0;
    background-color: var(--color-white);

    .chatTitleLeft {
      margin-top: 6px;
      margin-left: 2px;
    }

    .chatTitleRight {
      display: flex;
      gap: 15px;

      img {
        width: 16px;
        height: 16px;
        cursor: pointer;
      }
    }
  }

  .chatContent {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;

    .chatContentInner {
      display: flex;
      flex-direction: column;
      align-items: center;

      img {
        width: 94px;
        height: 80px;
      }

      .errorText {
        color: #333;
        font-size: 1rem;
        font-weight: 700;
        margin-top: 20px;
        margin-bottom: 14px;
      }

      .reloadBtn {
        color: var(--color-white);
        background-color: var(--color-primary);
        border: 1px solid #e5e5e5;
        border-radius: 4px;
        padding: 6px 16px;
        font-size: 0.875rem;
      }
    }

    .chatContentLeft {
      background-color: var(--color-white);
      width: 224px;
      height: 100%;
      box-sizing: border-box;
      margin-top: 2px;

      .searchBar {
        display: flex;
        align-items: center;
        gap: 8px;
        margin-top: 4px;
        padding: 6px 16px;

        .searchBarLeft {
          display: flex;
          align-items: center;
          padding: 8px 16px 4px;
          border: 1px solid #e5e5e5;
          border-radius: 4px;
          gap: 2px;
          svg {
            flex-shrink: 0;
            margin-bottom: 2px;
          }

          input {
            width: 75%;
            outline: none;
            box-shadow: none;
            border: none;
            appearance: none;

            &:focus {
              outline: none;
              box-shadow: none;
            }

            &::placeholder {
              color: rgba(0, 0, 0, 0.4);
              font-size: 0.875rem;
            }
          }
        }

        .searchAll {
          display: flex;
          align-items: center;
          gap: 4px;
          font-size: 0.875rem;
          color: #333;
          text-wrap: nowrap;
          font-family: "Roboto", "Droid Sans", Arial, sans-serif;
          cursor: pointer;
        }
      }

      .sellerList {
        display: flex;
        flex-direction: column;
        width: 100%;

        .seller {
          display: flex;
          gap: 8px;
          align-items: center;
          padding: 10px 16px;
          cursor: pointer;

          &:hover {
            background-color: rgba(0, 0, 0, 0.04);
          }

          img {
            width: 32px;
            height: 32px;
          }

          .sellerInfo {
            flex: 1;
            display: flex;
            flex-direction: column;
            font-family: "Roboto", "Droid Sans", Arial, sans-serif;

            .sellerInfoUpper {
              display: flex;
              justify-content: space-between;
              align-items: center;
              .name {
                color: #333;
                font-size: 0.875rem;
                font-weight: 500;
                overflow: hidden;
                white-space: nowrap;
                text-overflow: ellipsis;

                .keyword {
                  color: var(--color-primary);
                }
              }

              .timestamp {
                color: #666;
                font-size: 0.75rem;
                line-height: 14px;
                white-space: nowrap;
              }
            }

            .sellerInfoLower {
              display: flex;
              justify-content: space-between;
              align-items: center;
              color: #666;
              font-size: 0.875rem;
            }
          }
        }
      }
    }

    .chatContentRight {
      flex: 1;
      height: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      .chatContentRightInner {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;

        .startChat {
          color: #333;
          font-size: 1rem;
          font-weight: 500;
          margin-top: 14px;
          margin-bottom: 4px;
          font-family: "Roboto", "Droid Sans", Arial, sans-serif;
        }

        .startChatEn {
          color: #bbb;
          font-size: 0.875rem;
          font-weight: 400;
          font-family: "Roboto", "Droid Sans", Arial, sans-serif;
        }
      }
    }
  }

  @include respond-1280 {
    width: 50%;
    height: auto;
    aspect-ratio: 1.1 / 1;
  }
}

.inactive {
  transform: scale(0);
  opacity: 0;
  pointer-events: none;
}

.active {
  transform: scale(1);
  opacity: 1;
}

